# paper_convert

./: .gitignore  CLUSTER_SETUP.md  RAG_FTS_WORKFLOW.md  README.md  setup_gilbreth.sh  slurm_setup.sh
iclr_2025/: README.md  openreview_iclr2025_to_markdown.py
iclr_2025/pdf2md/: slurm_batch_convert.sh  slurm_batch_convert_0.sh
icml_2025/: README.md  icml2025_test.md  openreview_icml2025_to_markdown.py  slurm_download_pdfs.sh
icml_2025/pdf2md/: batch_convert.py  slurm_batch_convert.sh  slurm_batch_convert_0.sh  slurm_batch_convert_1.sh  slurm_batch_convert_2.sh  slurm_batch_convert_3.sh  slurm_batch_convert_4.sh  slurm_batch_convert_5.sh  submit_all.sh
neurips_2025/: NEXT_STEPS.md  README copy.md  analyze_neurips2025.py  fetch_openreview_summaries.py  openreview_neurips2025_to_markdown.py  sample.md  sample_flat.md  slurm_analyze_neurips2025.sh
neurips_2025/analysis/: analysis_direct.md  keyword_stats_top.csv  paper_features.csv  prediction_venue_bucket.md  primary_area_stats.csv  rating_bins.csv  report.md
neurips_2025/pdf2md/: .gitignore  README.md  UPDATES.md  pyproject.toml  requirements.txt  setup_cluster.sh  setup_local.sh  slurm_batch_convert.sh  slurm_batch_convert_cleanup.sh  slurm_batch_convert_cleanup2.sh  slurm_batch_convert_optimal.sh  slurm_batch_convert_part2.sh  slurm_batch_convert_part2b.sh  slurm_batch_convert_part3.sh  slurm_batch_convert_part4.sh  slurm_batch_convert_part4_retry.sh  slurm_test.sh
others/books/pdf2md/: slurm_batch_1.sh  slurm_batch_2.sh  slurm_batch_3.sh  slurm_batch_4.sh  slurm_batch_5.sh  slurm_batch_6.sh  (+3 more)
others/pdf2md/: postprocess_marker.py  slurm_batch_convert.sh
rag/: md_fts_index.py  md_fts_query.py
