[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2md"
version = "0.1.0"
description = "Batch PDF to Markdown converter using MinerU and Marker"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["pdf", "markdown", "ocr", "latex", "academic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "tqdm>=4.65.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
mineru = [
    "magic-pdf[full]>=0.9.0",
]
marker = [
    "marker-pdf>=1.0.0",
]
all = [
    "magic-pdf[full]>=0.9.0",
    "marker-pdf>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
pdf2md = "batch_convert:main"

[project.urls]
Homepage = "https://github.com/bnshin83/pdf2md"
Repository = "https://github.com/bnshin83/pdf2md"

[tool.setuptools]
py-modules = ["batch_convert"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
